wacc/test/golden/syntaxErr.basic.bgnErr
# begin token typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

bgn skip end


(line 11, column 1):
  unexpected "bgn"
  expected begin
  >
  >bgn skip end
   ^^^
  >